@@ -300,7 +300,7 @@
         </parameters>
       </constructor>
     </struct>
-    <alias name="PixMaxDepth" cname="ArtPixMaxDepth" type="art_u8 "/>
+    <alias name="PixMaxDepth" cname="ArtPixMaxDepth" type="art_u8"/>
     <struct name="Point" cname="ArtPoint">
       <field cname="x" type="double"/>
       <field cname="y" type="double"/>
@@ -687,7 +687,7 @@
         </parameters>
       </method>
     </struct>
-    <alias name="UtaBbox" cname="ArtUtaBbox" type="art_u32 "/>
+    <alias name="UtaBbox" cname="ArtUtaBbox" type="art_u32"/>
     <struct name="Vpath" cname="ArtVpath">
       <field cname="code" type="ArtPathcode"/>
       <field cname="x" type="double"/>
@@ -748,6 +748,6 @@
       <field cname="n_dash" type="int"/>
       <field cname="dash" type="double*"/>
     </struct>
-    <alias name="ArtBoolean" cname="art_boolean" type="int "/>
+    <alias name="ArtBoolean" cname="art_boolean" type="int"/>
   </namespace>
 </api>
