@@ -1324,7 +1324,7 @@
         </parameters>
       </method>
     </struct>
-    <alias name="AttributeSet" cname="AtkAttributeSet" type="GSList "/>
+    <alias name="AttributeSet" cname="AtkAttributeSet" type="GSList"/>
     <struct name="KeyEventStruct" cname="AtkKeyEventStruct">
       <field cname="type" type="gint"/>
       <field cname="state" type="guint"/>
@@ -1339,6 +1339,6 @@
       <field cname="old_value" type="GValue"/>
       <field cname="new_value" type="GValue"/>
     </struct>
-    <alias name="State" cname="AtkState" type="guint64      "/>
+    <alias name="State" cname="AtkState" type="guint64"/>
   </namespace>
 </api>
