@@ -1502,8 +1502,8 @@
           <callback cname="child_func">
             <return-type type="gboolean"/>
             <parameters>
-              <parameter type="" name=""/>
-              <parameter type="" name=""/>
+              <parameter type=" &#9;&#9;&#9;&#9;&#9;&#9; gboolean " name="child_func"/>
+              <parameter type=" &#9;&#9;&#9;&#9;&#9;&#9; gboolean " name="child_func"/>
             </parameters>
           </callback>
           <parameter type="gpointer" name="user_data"/>
@@ -2078,7 +2078,7 @@
       <field cname="group" type="gint"/>
       <field cname="level" type="gint"/>
     </struct>
-    <alias name="NativeWindow" cname="GdkNativeWindow" type="guint32 "/>
+    <alias name="NativeWindow" cname="GdkNativeWindow" type="guint32"/>
     <struct name="PangoAttrEmbossed" cname="GdkPangoAttrEmbossed">
       <field cname="attr" type="PangoAttribute"/>
       <field cname="embossed" type="gboolean"/>
@@ -2254,7 +2254,12 @@
         </parameters>
       </method>
     </struct>
-    <alias name="RegionBox" cname="GdkRegionBox" type="GdkSegment "/>
+    <struct name="RegionBox" cname="GdkRegionBox">
+      <field cname="x1" type="gint"/>
+      <field cname="y1" type="gint"/>
+      <field cname="x2" type="gint"/>
+      <field cname="y2" type="gint"/>
+    </struct>
     <struct name="RgbCmap" cname="GdkRgbCmap">
       <field cname="colors" array_len="256" type="guint32"/>
       <field cname="n_colors" type="gint"/>
@@ -2298,7 +2303,7 @@
       <field cname="time" type="guint32"/>
       <field cname="axes" array_len="GDK_MAX_TIMECOORD_AXES" type="gdouble"/>
     </struct>
-    <alias name="WChar" cname="GdkWChar" type="guint32       "/>
+    <alias name="WChar" cname="GdkWChar" type="guint32"/>
     <struct name="WindowAttr" cname="GdkWindowAttr">
       <field cname="title" type="gchar*"/>
       <field cname="event_mask" type="gint"/>
@@ -2315,7 +2320,7 @@
       <field cname="wmclass_class" type="gchar*"/>
       <field cname="override_redirect" type="gboolean"/>
     </struct>
-    <alias name="XEvent" cname="GdkXEvent" type="void "/>
+    <alias name="XEvent" cname="GdkXEvent" type="void"/>
     <struct name="Atom" cname="GdkAtom" opaque="true">
       <method name="Intern" cname="gdk_atom_intern" shared="true">
         <return-type type="GdkAtom"/>
