@@ -2531,9 +2531,9 @@
         <return-type type="GstCaps*"/>
       </method>
     </struct>
-    <alias name="ClockID" cname="GstClockID" type="gpointer  "/>
-    <alias name="ClockTime" cname="GstClockTime" type="guint64  "/>
-    <alias name="ClockTimeDiff" cname="GstClockTimeDiff" type="gint64   "/>
+    <alias name="ClockID" cname="GstClockID" type="gpointer"/>
+    <alias name="ClockTime" cname="GstClockTime" type="guint64"/>
+    <alias name="ClockTimeDiff" cname="GstClockTimeDiff" type="gint64"/>
     <struct name="Data" cname="GstData">
       <field cname="type" type="GType"/>
       <field cname="refcount" type="GstAtomicInt"/>
