@@ -10253,7 +10253,7 @@
       <field cname="accel_mods" type="GdkModifierType"/>
       <field cname="accel_flags" bits="16" type="guint"/>
     </struct>
-    <alias name="Allocation" cname="GtkAllocation" type="GdkRectangle    "/>
+    <alias name="Allocation" cname="GtkAllocation" type="GdkRectangle"/>
     <struct name="Arg" cname="GtkArg" opaque="true">
       <method name="FlagsGetType" cname="gtk_arg_flags_get_type" shared="true">
         <return-type type="GType"/>
@@ -11502,7 +11502,7 @@
         <return-type type="gboolean"/>
       </method>
     </struct>
-    <alias name="Type" cname="GtkType" type="GType   "/>
+    <alias name="Type" cname="GtkType" type="GType"/>
     <struct name="WidgetAuxInfo" cname="GtkWidgetAuxInfo" hidden="1">
       <field cname="x" type="gint"/>
       <field cname="y" type="gint"/>
