@@ -949,7 +949,7 @@
         <return-type type="void"/>
       </method>
     </boxed>
-    <alias name="Glyph" cname="PangoGlyph" type="guint32 "/>
+    <alias name="Glyph" cname="PangoGlyph" type="guint32"/>
     <struct name="GlyphGeometry" cname="PangoGlyphGeometry">
       <field cname="width" type="PangoGlyphUnit"/>
       <field cname="x_offset" type="PangoGlyphUnit"/>
@@ -1031,7 +1031,7 @@
         </parameters>
       </method>
     </boxed>
-    <alias name="GlyphUnit" cname="PangoGlyphUnit" type="gint32 "/>
+    <alias name="GlyphUnit" cname="PangoGlyphUnit" type="gint32"/>
     <struct name="GlyphVisAttr" cname="PangoGlyphVisAttr">
       <field cname="is_cluster_start" bits="1" type="guint"/>
     </struct>
@@ -1394,7 +1394,7 @@
         </parameters>
       </method>
     </struct>
-    <alias name="OTTag" cname="PangoOTTag" type="guint32  "/>
+    <alias name="OTTag" cname="PangoOTTag" type="guint32"/>
     <struct name="Rectangle" cname="PangoRectangle">
       <field cname="x" type="int"/>
       <field cname="y" type="int"/>
@@ -1502,6 +1502,6 @@
         </parameters>
       </method>
     </struct>
-    <alias name="XSubfont" cname="PangoXSubfont" type="guint16 "/>
+    <alias name="XSubfont" cname="PangoXSubfont" type="guint16"/>
   </namespace>
 </api>
