@@ -1,3 +1,8 @@
+2003-06-14  Mike Kestner  <mkestner@speakeasy.net>
+
+	* parser/gapi2xml.pl : some whitespace parsing cleanup
+	* api/*-api.xml : rerun of the parser.
+
 2003-06-12  Mike Kestner  <mkestner@speakeasy.net>
 
 	* generator/SimpleGen.cs : mark a few members virtual 
